// Copyright 2016 The Kubernetes Authors All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package hapi.release;

import "hapi/release/test_suite.proto";

import "google/protobuf/any.proto";

option go_package = "release";

// Status defines the status of a release.
message Status {
        enum Code {
                // Status_UNKNOWN indicates that a release is in an uncertain state.
                UNKNOWN = 0;
                // Status_DEPLOYED indicates that the release has been pushed to Kubernetes.
                DEPLOYED = 1;
                // Status_DELETED indicates that a release has been deleted from Kubermetes.
                DELETED = 2;
                // Status_SUPERSEDED indicates that this release object is outdated and a newer one exists.
                SUPERSEDED = 3;
                // Status_FAILED indicates that the release was not successfully deployed.
                FAILED = 4;
                // Status_DELETING indicates that a delete operation is underway.
                DELETING = 5;
                // Status_PENDING_INSTALL indicates that an install operation is underway.
                PENDING_INSTALL = 6;
                // Status_PENDING_UPGRADE indicates that an upgrade operation is underway.
                PENDING_UPGRADE = 7;
                // Status_PENDING_ROLLBACK indicates that an rollback operation is underway.
                PENDING_ROLLBACK = 8;
        }

        Code code = 1;

        // Deprecated
        // google.protobuf.Any details = 2;

        // Cluster resources as kubectl would print them.
        string resources = 3;

        // Contains the rendered templates/NOTES.txt if available
        string notes = 4;

        // LastTestSuiteRun provides results on the last test run on a release
        hapi.release.TestSuite last_test_suite_run = 5;
}
